--- a/BusAppCoreData/BusAppCoreData/Storyboard.storyboard
+++ b/BusAppCoreData/BusAppCoreData/Storyboard.storyboard
@@ -214,44 +214,24 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <rect key="contentStretch" x="0.34999999999999998" y="0.0" width="1" height="1"/>
                             </activityIndicatorView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="11v-9M-19o">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HHC-pg-4vt" customClass="CollapseClick">
                                 <rect key="frame" x="0.0" y="64" width="320" height="252"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="TimeStop" textLabel="Yt3-HN-gYC" style="IBUITableViewCellStyleDefault" id="IwF-tw-xHN">
-                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IwF-tw-xHN" id="l0o-Io-V7n">
-                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Yt3-HN-gYC">
-                                                    <rect key="frame" x="15" y="0.0" width="270" height="43"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="bxf-Rf-9fD" id="hSr-EF-KI4"/>
-                                    <outlet property="delegate" destination="bxf-Rf-9fD" id="Y3Q-3v-GJp"/>
-                                </connections>
-                            </tableView>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="HNT-e3-WZm" secondAttribute="centerX" id="0T3-OY-1cd"/>
                             <constraint firstItem="HNT-e3-WZm" firstAttribute="top" secondItem="ghI-2L-iLI" secondAttribute="bottom" id="2EK-Xt-HsW"/>
                             <constraint firstItem="ghI-2L-iLI" firstAttribute="width" secondItem="HNT-e3-WZm" secondAttribute="width" id="Dxy-wf-FfR"/>
+                            <constraint firstAttribute="trailing" secondItem="HHC-pg-4vt" secondAttribute="trailing" id="E5O-uk-hLa"/>
                             <constraint firstItem="HNT-e3-WZm" firstAttribute="top" secondItem="ghI-2L-iLI" secondAttribute="bottom" id="F3q-Fh-fZ2"/>
                             <constraint firstItem="zFi-eO-Oth" firstAttribute="top" secondItem="HNT-e3-WZm" secondAttribute="bottom" id="GvM-pj-hAI"/>
                             <constraint firstItem="ghI-2L-iLI" firstAttribute="top" secondItem="Dwy-Zo-SwX" secondAttribute="bottom" id="OMw-ZZ-Y0Q"/>
+                            <constraint firstItem="HHC-pg-4vt" firstAttribute="top" secondItem="Dwy-Zo-SwX" secondAttribute="bottom" id="Ve0-VI-5mb"/>
+                            <constraint firstItem="HHC-pg-4vt" firstAttribute="leading" secondItem="l8Y-Ie-rRE" secondAttribute="leading" id="dIM-QX-8mv"/>
                             <constraint firstAttribute="centerX" secondItem="ghI-2L-iLI" secondAttribute="centerX" id="dXP-sn-xQs"/>
+                            <constraint firstItem="HNT-e3-WZm" firstAttribute="top" secondItem="HHC-pg-4vt" secondAttribute="bottom" id="gR4-Hn-Jbd"/>
                             <constraint firstAttribute="trailing" secondItem="HNT-e3-WZm" secondAttribute="trailing" id="pXY-lg-gjv"/>
                             <constraint firstItem="HNT-e3-WZm" firstAttribute="leading" secondItem="l8Y-Ie-rRE" secondAttribute="leading" id="wAd-IG-fwa"/>
                             <constraint firstItem="ghI-2L-iLI" firstAttribute="height" secondItem="HNT-e3-WZm" secondAttribute="height" id="xkD-XJ-kRC"/>
@@ -261,7 +241,7 @@
                     <connections>
                         <outlet property="activityIndicator" destination="nCs-0h-LeH" id="FNb-RZ-spD"/>
                         <outlet property="mapView" destination="HNT-e3-WZm" id="DiL-eV-uaZ"/>
-                        <outlet property="stopTimesTableView" destination="11v-9M-19o" id="j0V-Qh-o9T"/>
+                        <outlet property="stopTimesTableView" destination="HHC-pg-4vt" id="014-jm-cLQ"/>
                         <outlet property="webPage" destination="ghI-2L-iLI" id="Hh3-ic-bNr"/>
                     </connections>
                 </viewController>
